Committed By: Somnath

--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -23,7 +23,7 @@
 <script>
  	var app = angular.module("myapp",[]);
  	app.controller("myCtrl",function($scope){
- 		//var abc = {};
+ 		var abc = {};
  		$scope.techSpecs = [{techAttr:"",techValue:""}];
  		//$scope.arr = new Array();
  		//abc.specs = $scope.arr;
