--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -48,7 +48,7 @@
  		$scope.showLog = function(){
  			console.log($scope.techSpecs);
  			$scope.product.pid = $scope.pid;
- 			$scope.product.techSpecs = $scope.techSpec;
+ 			$scope.product.techSpecs = $scope.techSpecs;
  			console.log($scope.product);
  		}
  		
