--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -35,7 +35,7 @@
 
 <body>
  <!--  <header class=intro>
-    <h1 class="w3-xxxlarge"><b>Great Outdoors</b></h1>
+    <h1 class="w3-xxxlarge"><b>Great Outdoorssfdsf</b></h1>
   </header>-->
 	
 	<div class="container" ng-app="myapp" ng-controller="myCtrl">
