--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <style>
-	div{
+	.marginT70{
 		background-color: sand;
 		margin-top: 70px;
 		
@@ -39,8 +39,11 @@
   </header>-->
 	
 	<div class="container" ng-app="myapp" ng-controller="myCtrl">
-		<div class=" col-md-4 form-group">
-			<input class="form-control" type="text" ng-model="pid" placeholder="Enter pid" >
+		<div class="marginT70 col-md-4 form-group">
+			<input class="form-control" type="text" ng-model="pid" ng-change="searchBox()" placeholder="Enter pid">
+			<div ng-repeat="x in techSpecs1| filter : pid" ng-show="searchList">
+			 <span style="cursor:pointer" ng-click="fetchData($index)">{{x.pid}}</span>
+			 </div>
 		</div>
 		<div class="col-md-8"></div>
 		<div class="col-md-12">
@@ -55,18 +58,49 @@
 			<button class="btn btn-primary" ng-click="save()">Save</button>
 		</div>
 	</div>
-</p>
+
 
 </body>
 <script>
  	var app = angular.module("myapp",[]);
  	app.controller("myCtrl",function($scope,$http){
  		$scope.product = {};
+ 		$scope.pid = null;
+ 		var update=false;
+ 		$scope.searchList = false;
  		$scope.product.pid = null;
  		$scope.product.techSpecs = new Array();
  		$scope.techSpecs = [{techAttr:"",techValue:""}];
  		
  		
+ 		//
+ 		//Initialising data from DB
+ 		//
+ 		$http.post("http://localhost:3000/initializeData").then(function(response){
+		        $scope.techSpecs1 = response.data;
+		        console.log(response.data);
+			});
+ 		
+ 		//
+ 		//search list
+ 		//
+ 		
+ 		$scope.searchBox = function(){
+ 			
+ 			if($scope.pid.length>=2){
+ 				$scope.searchList = true;
+ 			} 			
+ 		}
+ 		
+ 		$scope.fetchData = function (x){
+ 			$scope.pid=$scope.techSpecs1[x].pid;
+ 			$scope.techSpecs = $scope.techSpecs1[x].techSpecs;
+ 			update = true;
+ 			
+ 		}
+ 		//
+ 		//Pushing data in DB
+ 		//
  		$scope.addTextBox = function(){ 			
  			$scope.techSpecs.push({techAttr:"",techValue:""});
  		}
@@ -76,9 +110,16 @@
  			$scope.product.pid = $scope.pid;
  			$scope.product.techSpecs = $scope.techSpecs;
  			console.log($scope.product);
- 			$http.post("http://localhost:3000/insertData",$scope.product).then(function(response){
-                alert("received");
-        	});
+ 			if(update){
+ 				$http.post("http://localhost:3000/updateData",$scope.product).then(function(response){
+	                alert("received");
+	        	});
+ 			}
+ 			else{
+	 			$http.post("http://localhost:3000/insertData",$scope.product).then(function(response){
+	                alert("received");
+	        	});
+ 			}
  		}
  		
  	});
