--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -48,6 +48,8 @@ tr:nth-child(even) {
 		<input text-align ="center" type= "text" ng-model= "pid" placeholder="pid">
 		<br>
 		<button class="btn btn-primary" ng-click="getData()">Submit</button>
+		<br>
+		<button class="btn btn-primary" ng-click="getData()">Delete</button>
 	</div>
 
 </body>
