Committed By: Nitish

--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -47,7 +47,7 @@ tr:nth-child(even) {
 		</table>
 		<input text-align ="center" type= "text" ng-model= "pid" placeholder="pid">
 		<br>
-		<button  ng-show="prod" class="btn btn-primary" ng-click="getData()" >Submit</button>
+		<button class="btn btn-primary" ng-click="getData()" >Submit</button>
 	</div>
 
 </body>
