--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -29,12 +29,12 @@ tr:nth-child(even) {
 
     </style>     
 </head>
-<body style="background-color:LightCyan;" >
+<body style="background-color:#008B8B" >
 	<div class="container" ng-app="MyApp" ng-controller="MyController" ng-init="prod=true">
 	
 		<table class="table " ng-hide="prod">
 			<thead>
-				<th>Title</th>
+				<th>Specification</th>
 				<th>Description</th>
 			
 			</thead>
