--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -17,7 +17,7 @@
 }
 
 body {
-	background-color: rgb(210, 234, 252);
+	/*background-color: rgb(210, 234, 252);*/
 	background-image : url("3.jpeg");
 }
 
