--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -22,7 +22,9 @@ table {
     border-collapse: collapse;
     width: 10%;
 }
-  
+img{
+	max-width: 100%;
+}  
 tr:nth-child(even) {
     background-color: LightGrey;
 }
@@ -31,23 +33,27 @@ tr:nth-child(even) {
 </head>
 <body style="background-color:#008B8B" >
 	<div class="container" ng-app="MyApp" ng-controller="MyController" ng-init="prod=true">
-	
-		<table class="table " ng-hide="prod">
-			<thead>
-				<th>Specification</th>
-				<th>Description</th>
-			
-			</thead>
-			<tbody>
-				<tr ng-repeat="x in techSpecs[0].techSpecs">
-					<td>{{x.techAttr}}</td>
-					<td>{{x.techValue}}</td>
-				</tr>
-			</tbody>
-		</table>
-		<input text-align ="center" type= "text" ng-model= "pid" placeholder="pid">
-		<br>
-		<button class="btn btn-primary" ng-click="getData()" >Submit</button>
+		<div class="col-md-4" ng-if="techSpecs[0].img">
+			<img src="{{imag}}">
+		</div>
+		<div class="col-md-8">
+			<table class="table " ng-hide="prod">
+				<thead>
+					<th>Specification</th>
+					<th>Description</th>
+				
+				</thead>
+				<tbody>
+					<tr ng-repeat="x in techSpecs[0].techSpecs track by $index">
+						<td>{{x.techAttr}}</td>
+						<td>{{x.techValue}}</td>
+					</tr>
+				</tbody>
+			</table>
+			<input text-align ="center" type= "text" ng-model= "pid" placeholder="pid">
+			<br>
+			<button class="btn btn-primary" ng-click="getData()" >Submit</button>
+		</div>
 	</div>
 
 </body>
@@ -58,8 +64,9 @@ app.controller("MyController",function($scope,$http){
 		$scope.prod=false;
 		var itemPid = {pid : $scope.pid.toString()};
 		$http.post("http://localhost:3000/readData",itemPid).then(function(response){
-	        $scope.techSpecs = response.data;
-		});
+			$scope.techSpecs = response.data;
+			$scope.imag = "resources/images/"+ $scope.techSpecs[0].img;
+ 		});
 	}
 });
 </script>
