--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -80,7 +80,7 @@ body {
 						ng-model="data.techAttr" placeholder="Enter Description Title..."></td>
 					<td><input class="form-control" type=text
 						ng-model="data.techValue" placeholder="Enter Description"></td>
-					<td><span class="glyphicon glyphicon-remove"
+					<td><span style="cursor: pointer" class="glyphicon glyphicon-remove"
 						ng-click="remove($index)"></span></td>
 				</tr>
 			</table>
