commited by somnath

--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -51,10 +51,15 @@ body {
 	text-align: center;
 }
 
+ img{
+        border-radius: 5px;
+       /* margin-left: 10%;*/
+    }
+
 </style>
 
 <body >
-	
+<img src="god.jpg" width="1500" height="150">
 <div ng-init="myVar = 'gd.png'">
 <img ng-src="{{myVar}}">
 </div>
