--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -82,7 +82,7 @@ body {
 		<div class="col-md-12 ">
 			<table class="table data-table " class="form-group">
 				<thead>
-					<th>Description Title</th>
+					<th>Specification</th>
 					<th>Description</th>
 				</thead>
 				<tr ng-repeat="data in techSpecs">
