--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -17,7 +17,7 @@
 }
 
 body {
-	background-color: seagreen;
+	background-color: seagreen
 	/*background-image : url("003+background+pattern+designs.jpg");*/
 }
 
@@ -89,13 +89,12 @@ body {
 		</div>
 		<div class="col-md-12 ">
 			<table class="table data-table " class="form-group">
-					
 				<thead>
 					<th>Specification</th>
 					<th>Description</th>
 				</thead>
 				<tr ng-repeat="data in techSpecs">
-									<td><input class="form-control" type=text
+					<td><input class="form-control" type=text
 						ng-model="data.techAttr" placeholder="Enter Description Title..."></td>
 					<td><input class="form-control" type=text
 						ng-model="data.techValue" placeholder="Enter Description"></td>
