--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -104,7 +104,7 @@ body {
 			</table>
 			<span style="cursor: pointer" class="glyphicon glyphicon-plus"
 				ng-click="addTextBox()"></span> <br>
-			<input type="file" file-input="files" accept=".jpg,.jpeg,.png" multiple>
+			<input type="file" id="fileUpload"file-input="files" accept=".jpg,.jpeg,.png" multiple>
 			<br>
 			<button class="btn btn-primary" ng-click="save()">Save</button>
 			<button class="btn btn-danger" ng-click="delete()">Delete</button>
@@ -245,6 +245,8 @@ body {
                     }
                     $scope.techSpecs = [{techAttr:"",techValue:""}];
                     $scope.pid = "";
+                    document.getElementById("fileUpload").value = null;
+                    $scope.files = null;
                     
                 }
                 
