--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -277,6 +277,8 @@ body {
                     });
                     $scope.techSpecs = [{techAttr:"",techValue:""}];
                     $scope.pid = "";
+                    document.getElementById("fileUpload").value = null;
+                    $scope.files = null;
                 
 
                 }
