--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -64,7 +64,7 @@ body {
     
     .tooltip .tooltiptext {
         visibility: hidden;
-        width: 65px;
+        width: 80px;
         background-color: #555;
         color: #fff;
         text-align: center;
@@ -146,7 +146,7 @@ body {
 			</table>
 			 <div class="tooltip">
                     <span style="cursor: pointer" class="glyphicon glyphicon-plus" ng-click="addTextBox()"></span>
-                    <span class="tooltiptext">Add New</span>
+                    <span class="tooltiptext">Add New Row</span>
                 </div> <br>
 			<input type="file" file-input="files" accept=".jpg,.jpeg,.png" multiple>
 			
