--- a/GO_Project/WebContent/Address.html
+++ b/GO_Project/WebContent/Address.html
@@ -85,7 +85,7 @@
 
                 </tr>
                 <tr>
-                    <td><label>Pincode</label><input class="form-control" type=number ng-model="data.pincode" placeholder="Enter Pincode"></td>
+                    <td><label>Zipcode</label><input class="form-control" type=number ng-model="data.pincode" placeholder="Enter Pincode"></td>
 
                 </tr>
                 <tr>
