--- a/GO_Project/HTML/cartdiv.html
+++ b/GO_Project/HTML/cartdiv.html
@@ -1,10 +1,8 @@
 <div > 
  
-    <table  border="1">
+    <table border="1">
         <tr>
             <th>Product Image</th>
-            <th>Customer ID</th>
-            <th>Product ID</th>
             <th>Product Name</th>
             <th>Quantity</th>
             <th>Gift_Wrapper</th>
@@ -12,11 +10,9 @@
             <th> Address</th>
         </tr>
         <tr ng-repeat="x in Cart.Product_List">
-            <td><img src="a.jpeg"  width="100" height="100"></td>
-            <td>{{Cart.customerId}}</td>
-            <td>{{x.pid}}</td>
+            <td><img src="{{x.img}}"  width="100" height="100"></td>
             <td>{{x.pname}}</td>
-            <td> <input type="number" ></td>
+            <td><span class="glyphicon glyphicon-plus" ng-click="x.quantity=x.quantity+1"></span>{{x.quantity}}<span class="glyphicon glyphicon-minus" ng-click="x.quantity=x.quantity-1"></span>       </td>
             <td><input type="checkbox">Yes<br></td>
             <td></td>   
     
@@ -29,4 +25,5 @@
     
         </tr>
     </table>
+    <button ng-click="checkout()"></button>
 </div>    
