--- a/GO_Project/HTML/Address_Suggestion.html
+++ b/GO_Project/HTML/Address_Suggestion.html
@@ -3,11 +3,11 @@
   <h2>Address Change</h2>
     <div class="modal-body">
         <ul></ul>
-            <li>{{addressList.name}}</li>
+            <li>{{addressList.customerName}}</li>
             <li>{{addressList.city}}</li>
             <li>{{addressList.state}}</li>
-            <li>{{addressList.pin}}</li>
-            <li>{{addressList.mob}}</li><br>
+            <li>{{addressList.pincode}}</li>
+            <li>{{addressList.mobileNo}}</li><br>
     </div>
     
   <!-- Trigger the modal with a button -->
