--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<meta charset="UTF-8">
-<title>Index</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	<meta charset="utf-8">
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="./controller/cartLogic.js"></script>
 </head>
-<body>
- <div style="cursor: pointer" onclick="window.location=('http://192.168.10.41:3000/master/addTechSpecs.html')"> Add Technical Specification</div>
- <div style="cursor: pointer" onclick="window.location=('http://192.168.10.41:3000/master/getTechnicalSpecs.html')"> Get Technical Specification</div> 
+<style>
+	
+</style>
+
+<body ng-app="myApp">
+    <div class="logo">
+		<img  src="god.jpg" >
+	</div>
+    
+	<div ng-view>
+
+	</div>
 
 </body>
+
 </html>
+
+	
+
+
