--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -12,7 +12,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="./controller/cartLogic.js"></script>
+    
+	<script src="./router.js"></script>
+	<script src="./controller/cartController.js"></script>
+	<script src="./controller/newAddressFormController.js"></script>
+	<script src="./controller/addressSuggestionController.js"></script>
+	<script src="./controller/orderController.js"></script>
+	<script src="./controller/logisticsController.js"></script>
 </head>
 <style>
 	
