by: nitish reviewed by: anka

--- a/GO_Project/HTML/Address_Suggestion.html
+++ b/GO_Project/HTML/Address_Suggestion.html
@@ -12,7 +12,7 @@
     
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">Change</button>
-  <a href="#"><button type="button" class="btn btn-info btn-lg" >Go Back</button> </a>
+  <a><button type="button" class="btn btn-info btn-lg" ng-click="goBack()">Go Back</button> </a>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
