--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -56,6 +56,14 @@
 				
 				</thead>
 				<tbody>
+                    <tr>
+                        <td>pname</td>
+                    <td>{{techSpecs[0].itemName}}</td>
+                    </tr>
+                    <tr>
+                        <td>price</td>
+                    <td>{{techSpecs[0].itemPrice}}</td>
+                    </tr>
 					<tr ng-repeat="x in techSpecs[0].techSpecs track by $index">
 						<td>{{x.techAttr}}</td>
 						<td>{{x.techValue}}</td>
@@ -79,6 +87,7 @@ app.controller("MyController",function($scope,$http){
 		var itemPid = {pid : $scope.pid.toString()};
 		$http.post("http://localhost:3000/readData",itemPid).then(function(response){
 			$scope.techSpecs = response.data;
+            console.log($scope.techSpecs);
 			$scope.imag = "resources/images/"+ $scope.techSpecs[0].img;
  		});
 	}
