--- a/GO_Project/HTML/order.html
+++ b/GO_Project/HTML/order.html
@@ -1,37 +1,27 @@
 <div class="container">
 
-    <table class="table alignCenter">
-        <thead>
-            <tr>
-                <th>Product Image</th>
-                <th>customerId</th>
-                <th>price</th>
-                <th>supplierId</th>
-                <th>logisticId</th>
-                <th>status</th>
-                <th>address</th>
-                <th>timeDate</th>
-           </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="x in product">
-                <td>
-                    
-                </td>
-                <td>{{x.customerId}}</td>
-                <td>{{x.price}}</td>
-                <td>{{x.supplierId}}</td>
-                <td>{{x.logisticId}}</td>
-                <td>{{x.status}}</td>
-                <td>{{x.address.city}}</td>
-                <td>{{x.timeDate}}</td>
-                 <td>
-                    <a href=""  class="btn btn-success">Change Product</a>
-                    <a href="#!suggest/?index={{$index}}" class="btn btn-success">Change Address</a>
-                </td>
+    <div class= "well" ng-repeat="x in product">
+        <div>
+            <span>ORDER ID:-{{x.orderId}}</span>
+            <span class="floatRight">Deliver To:- {{x.address.customerName}},{{x.address.Address}},{{x.address.city}},{{x.address.mobileNo}},{{x.address.pincode}},{{x.address.state}}
 
-            </tr>
-        </tbody>
-    </table>
+            </span>
+        </div>
+        <div>
+            <img src="./resources/images/climbers.jpg" height="150px">
+            <div class = "col-md-2 floatRight displayInlineBlock">
+                <button ng-disabled="x.status> 1&& x.status<6" ng-click="cancelOrder(x)" class="btn btn-lg btn-danger">Cancel Order</button>
+            </div>
+            <ol class="progtrckr" data-progtrckr-steps="6">
+                <li ng-class="{progtrckrDone : x.status>=0&&x.status<6, progtrckrTodo :x.status <0,progtrckrTodo :x.status==6 }">Order Placed</li>
+                <li ng-class="{progtrckrDone : x.status>=1&&x.status<6, progtrckrTodo :x.status <1,progtrckrTodo :x.status==6  }">Processing</li>
+                <li ng-class="{progtrckrDone : x.status>=2&&x.status<6,progtrckrTodo :x.status <2 ,progtrckrTodo :x.status==6 }">Order Dispatched</li>
+                <li ng-class="{progtrckrDone : x.status>=3&&x.status<6,progtrckrTodo :x.status <3 ,progtrckrTodo :x.status==6 }">On The Way</li>
+                <li ng-class="{progtrckrDone : x.status>=4&&x.status<6,progtrckrTodo :x.status <4 ,progtrckrTodo :x.status==6 }">Out for Delivery</li>
+                <li ng-class="{progtrckrDone : x.status>=5&&x.status<6,progtrckrTodo :x.status <5 ,progtrckrTodo :x.status==6 }">Delivered</li>
+            </ol>
 
+            <div>{{x.date|date: "mediumDate" }}</div>
+        </div>
+    </div>
 </div>
