--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -32,5 +32,6 @@
             </tr>
         </tbody>
     </table>
-    <button ng-click="checkout()">Checkout</button>
+    <button class="btn btn-lg btn-success" ng-click="checkout()">Checkout</button>
+    <a class="btn btn-lg btn-info" href="#!order">Your Orders</a>
 </div>    
