--- a/GO_Project/HTML/logisticsMain.html
+++ b/GO_Project/HTML/logisticsMain.html
@@ -1,15 +1,17 @@
 <div ng-repeat="y in Order">
+	{{y.orderId}}<br>
 	{{y.customerId}}<br>
 	{{y.pid}}<br>
 	{{y.pname}}<br>
 	status:{{status[y.status]}}<br>
 	gift_Wrapper:{{y.gift_Wrapper}}<br>
+	newStatus:{{status[newStatus]}}<br>
 	{{y.address.customerName}},{{y.address.Address}},{{y.address.city}},{{y.address.mobileNo}},{{y.address.pincode}},{{y.address.state}}
-<select ng-model="y.status">
+<select ng-model="newStatus">
 	<option ng-repeat="x in status" ng-hide="y.status>$index " value="{{$index}}">
 		<span>{{x}}</span>
 	</option>
 </select>
-<button ng-click="store(y)">Update</button>
+<button ng-click="store(y,newStatus)">Update</button>
 <br><br><br>
 </div>
