--- a/GO_Project/HTML/logisticsMain.html
+++ b/GO_Project/HTML/logisticsMain.html
@@ -1,17 +1,27 @@
 <div ng-repeat="y in Order">
-	{{y.orderId}}<br>
-	{{y.customerId}}<br>
-	{{y.pid}}<br>
-	{{y.pname}}<br>
-	status:{{status[y.status]}}<br>
-	gift_Wrapper:{{y.gift_Wrapper}}<br>
-	newStatus:{{status[newStatus]}}<br>
-	{{y.address.customerName}},{{y.address.Address}},{{y.address.city}},{{y.address.mobileNo}},{{y.address.pincode}},{{y.address.state}}
-<select ng-model="newStatus">
-	<option ng-repeat="x in status" ng-hide="y.status>$index " value="{{$index}}">
-		<span>{{x}}</span>
-	</option>
-</select>
-<button ng-click="store(y,newStatus)">Update</button>
-<br><br><br>
+	<div class="container">
+		<div class="well">
+			<div>
+				<span>ORDER ID:-{{y.orderId}}</span>
+				<span class="floatRight">
+					{{y.date|date: "mediumDate" }}
+				</span>
+			</div>
+			<div>
+					Deliver To:- {{y.address.customerName}},{{y.address.Address}},{{y.address.city}},{{y.address.mobileNo}},{{y.address.pincode}},{{y.address.state}}
+			</div>
+			<br> productId: {{y.pid}}
+			<br> status: {{status[y.status]}}
+			<br> gift_Wrapper: {{y.gift_Wrapper}}
+			<br> newStatus: {{status[newStatus]}}
+			<span class="floatRight">
+			<select ng-model="newStatus">
+				<option ng-repeat="x in status" ng-hide="{{y.status>$index}}" value="{{$index}}">
+					<span>{{x}}</span>
+				</option>
+			</select>
+			<button ng-click="store(y,newStatus)">Update</button>
+		</span>
+		</div>
+	</div>
 </div>
