--- a/GO_Project/HTML/addressSuggestion.html
+++ b/GO_Project/HTML/addressSuggestion.html
@@ -33,7 +33,7 @@
                 <li>{{x.pincode}}</li>
                 <li>{{x.mobileNo}}</li><br>
               </ul>
-                <div class="deliverBtn">
+                <div class="paddingT10">
                   <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="Data($index)">
                     Deliver to this Address
                   </button>
