--- a/GO_Project/HTML/order.html
+++ b/GO_Project/HTML/order.html
@@ -8,10 +8,10 @@
             </span>
         </div>
         <div>
-            <img src="./resources/images/climbers.jpg" height="150px">
+            <img class="listImage" src="./resources/images/climbers.jpg" >
             <div class = "col-md-2 floatRight displayInlineBlock">
-                <button ng-disabled="{{x.status> 1}}" ng-click="cancelOrder(x)" class="btn btn-danger">Cancel Order</button>
-                <a ng-disabled="{{x.status> 1}}" href="#!suggest/?index={{$index}}" class="btn btn-success">Change Address</a>
+                <button ng-disabled="{{x.status> 1}}" ng-click="cancelOrder(x)" class="btn btn-danger marginT10">Cancel Order</button>
+                <a ng-disabled="{{x.status> 1}}" href="#!suggest/?index={{$index}}" class="btn btn-success marginT10">Change Address</a>
             </div>
             <ol class="progtrckr" data-progtrckr-steps="6">
                 <li ng-class="{progtrckrDone : x.status>=0&&x.status<6, progtrckrTodo :x.status <0,progtrckrCancel :x.status==6 }">Order Placed</li>
