--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -20,6 +20,7 @@
 	<script src="./controller/addressSuggestionController.js"></script>
 	<script src="./controller/orderController.js"></script>
 	<script src="./controller/logisticsController.js"></script>
+	<script src="./controller/productListController.js"></script>
 </head>
 <style>
 	
