--- a/GO_Project/getTechnicalSpecs.html
+++ b/GO_Project/getTechnicalSpecs.html
@@ -85,7 +85,7 @@ app.controller("MyController",function($scope,$http){
 	$scope.getData = function (){
 		$scope.prod=false;
 		var itemPid = {pid : $scope.pid.toString()};
-		$http.post("http://localhost:3000/readData",itemPid).then(function(response){
+		$http.post("http://192.168.10.41:3000/readData",itemPid).then(function(response){
 			$scope.techSpecs = response.data;
             console.log($scope.techSpecs);
 			$scope.imag = "resources/images/"+ $scope.techSpecs[0].img;
