By: Anka Rao, Priyanka Joseph
Review by: Nitish

--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -19,6 +19,7 @@
 	<script src="./controller/addressSuggestionController.js"></script>
 	<script src="./controller/orderController.js"></script>
 	<script src="./controller/logisticsController.js"></script>
+	<script src="./controller/addTechnicalSpecs.js"></script>
 </head>
 <style>
 	
