--- a/GO_Project/HTML/order.html
+++ b/GO_Project/HTML/order.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <div class= "well" ng-repeat="x in product">
+    <div class="well" ng-repeat="x in product">
         <div>
             <span>ORDER ID:-{{x.orderId}}</span>
             <span class="floatRight">Deliver To:- {{x.address.customerName}},{{x.address.Address}},{{x.address.city}},{{x.address.mobileNo}},{{x.address.pincode}},{{x.address.state}}
@@ -8,10 +8,10 @@
             </span>
         </div>
         <div>
-            <img class="listImage" src="./resources/images/climbers.jpg" >
-            <div class = "col-md-2 floatRight displayInlineBlock">
+            <img class="listImage" src="./resources/images/climbers.jpg">
+            <div class="col-md-2 floatRight displayInlineBlock">
                 <button ng-disabled="{{x.status> 1}}" ng-click="cancelOrder(x)" class="btn btn-danger marginT10">Cancel Order</button>
-                <button ng-disabled="{{x.status> 2}}" ng-click="addressChange($index)" class="btn btn-success marginT10">Change Address</button>
+                <button ng-disabled="{{x.status> 2}}" data-toggle="modal" data-target="#myModal2" ng-click="addressChange($index)" class="btn btn-success marginT10">Change Address</button>
             </div>
             <ol class="progtrckr" data-progtrckr-steps="6">
                 <li ng-class="{progtrckrDone : x.status>=0&&x.status<6, progtrckrTodo :x.status <0,progtrckrCancel :x.status==6 }">Order Placed</li>
@@ -23,6 +23,19 @@
             </ol>
 
             <div>{{x.date|date: "mediumDate" }}</div>
+        </div>
+        <div class="modal fade" id="myModal2" role="dialog">
+            <div class="modal-dialog" >
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Change of Address</h4>
+                </div>
+                <div class="modal-body addressList" >
+                    <div ng-include="'./HTML/addressSuggestion.html'">
+
+                    </div>
+                </div>                
+            </div>
         </div>
     </div>
 </div>
