--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -21,6 +21,8 @@
 	<script src="./controller/orderController.js"></script>
 	<script src="./controller/logisticsController.js"></script>
 	<script src="./controller/productListController.js"></script>
+	<script src="./controller/productDetailsController.js"></script>
+	<script src="./controller/homeController.js"></script>
 </head>
 <style>
 	
