--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -24,7 +24,7 @@
                 </td>
                 <td>{{x.address.city}}</td>       
                 <td>
-                    <a  href="#!suggest/?index={{$index}}" class="btn btn-success">Change Address</a>
+                    <button data-toggle="modal" data-target="#myModal2" class="btn btn-success" ng-click="addressChange(x)">Change Address</button>
                 </td>
                 <td>
                     <span class="text-danger glyphicon glyphicon-trash font24" ng-click="deleteCartItem($index)"></span>
@@ -32,6 +32,36 @@
             </tr>
         </tbody>
     </table>
+    <div class="modal fade" id="myModal2" role="dialog" ng-init="init()">
+        <div class="modal-dialog addressPopUp" >
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Change of Address</h4>
+            </div>
+            <div class="modal-body addressList" >
+                    <h2>Address Change</h2>
+                    <div>
+                        <ul>
+                            <li>{{address.customerName}}</li>
+                            <li>{{address.city}}</li>
+                            <li>{{address.state}}</li>
+                            <li>{{address.pincode}}</li>
+                            <li>{{address.mobileNo}}</li>
+                        </ul>
+                        <br>
+                    </div>
+                    <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">Change</button>
+                    <button type="button" class="btn btn-warning btn-lg" ng-click="updateAddress()">Update Address</button>
+                    <button type="button" class="btn btn-info btn-lg" data-dismiss="modal">Close</button>
+                <!--div ng-include="'./HTML/addressSuggestion.html'">
+
+                </div-->
+            </div>                
+        </div>
+    </div>
+    <div ng-include="'./HTML/addressSuggestion.html'">
+
+    </div>
     <button class="btn btn-lg btn-success" ng-click="checkout()">Checkout</button>
     <a class="btn btn-lg btn-info" href="#!order">Your Orders</a>
 </div>    
