--- a/GO_Project/HTML/productList.html
+++ b/GO_Project/HTML/productList.html
@@ -3,7 +3,8 @@
     <div class="col-md-3 listItemCell well"  ng-repeat="y in products" ng-click="selectedItem(y)">
           <img src="{{'./resources/images/'+y.img}}" class="img-thumbnail proImage" style="max-height: 200px" alt="{{x.pName}}">
         <br>
-        {{y.pid}}  {{y.itemName}}        {{y.itemPrice}}
+        <a href="{{'#!/productDetails?pid='+y.pid}}">{{y.pid}}</a>  {{y.itemName}}        {{y.itemPrice}}
+        
     </div>
     
 </div>
