--- a/GO_Project/addTechSpecs.html
+++ b/GO_Project/addTechSpecs.html
@@ -187,7 +187,7 @@ body {
  		//
  		//Initialising data from DB
  		//
- 		$http.post("http://192.168.10.41:3000/initializeData").then(function(response){
+ 		$http.post("http://localhost:3000/initializeData").then(function(response){
 		        $scope.techSpecs1 = response.data;
 		        console.log(response.data);
 			});
@@ -283,7 +283,7 @@ body {
                    			return ;
               			 }
                			document.getElementById("demo").innerHTML = txt;
-                        $http.post("http://192.168.10.41:3000/updateData", fd).then(function(response) {
+                        $http.post("http://localhost:3000/updateData", fd).then(function(response) {
                             alert("received");
                         });
                     }
@@ -297,7 +297,7 @@ body {
                    			return ;
               			 }
                			document.getElementById("demo").innerHTML = txt;
-                        $http.post("http://192.168.10.41:3000/insertData", fd,{
+                        $http.post("http://localhost:3000/insertData", fd,{
 							transformRequest: angular.identity,
 							headers: { 'Content-Type': undefined }
 						}).then(function(response) {
@@ -333,7 +333,7 @@ body {
                     		pid: $scope.pid.toString()
                     };
                    
-                    $http.post("http://192.168.10.41:3000/DeleteData", del).then(function(response) {
+                    $http.post("http://localhost:3000/DeleteData", del).then(function(response) {
                         alert("received");
                     });
                     $scope.techSpecs = [{techAttr:"",techValue:""}];
