--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -2,7 +2,7 @@
 
 	<table class="table alignCenter">
 		<thead>
-			<tr>
+			<tr class="table-success">
 				<th>Product Image</th>
 				<th>Product Name</th>
 				<th>Quantity</th>
