commited by :Anka Rao
reviewed by :Nitish

--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -23,6 +23,7 @@
 	<script src="./controller/productListController.js"></script>
 	<script src="./controller/productDetailsController.js"></script>
 	<script src="./controller/homeController.js"></script>
+	<script src="./controller/registerFormController.js"></script>
 </head>
 <style>
 	
