--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -1,8 +1,8 @@
 <div class="container">
-
+<h2><b>Shopping Cart</b></h2>
 	<table class="table alignCenter">
-		<thead>
-			<tr class="table-success">
+		<thead >
+			<tr class="table-success" >
 				<th>Product Image</th>
 				<th>Product Name</th>
 				<th>Quantity</th>
@@ -29,7 +29,7 @@
 				</td>
 				<td>
 					<button data-toggle="modal" data-target="#myModal2"
-						class="btn btn-success" ng-click="addressChange(x)">Change
+						class="btn btn-info" ng-click="addressChange(x)">Change
 						Address</button>
 				</td>
 				<td><span class="text-danger glyphicon glyphicon-trash font24"
@@ -59,7 +59,7 @@
 					data-toggle="modal" data-target="#myModal">Change</button>
 				<button type="button" class="btn btn-warning btn-lg"
 					ng-click="updateAddress()">Update Address</button>
-				<button type="button" class="btn btn-info btn-lg"
+				<button type="button" class="btn btn-danger btn-lg"
 					data-dismiss="modal">Close</button>
 				<!--div ng-include="'./HTML/addressSuggestion.html'">
 
