--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -23,11 +23,8 @@
 	<script src="./controller/productListController.js"></script>
 	<script src="./controller/productDetailsController.js"></script>
 	<script src="./controller/homeController.js"></script>
+	<script src="./controller/addTechnicalSpecsController.js"></script>
 </head>
-<style>
-	
-</style>
-
 <body ng-app="myApp">
     <div class="logo">
 		<img  src="./resources/logo/god.jpg" >
