--- a/GO_Project/HTML/productList.html
+++ b/GO_Project/HTML/productList.html
@@ -1,64 +1,20 @@
+//
 <div class="col-md-12">
 
-    <div class>
-
-
-        <div class="search containerCss ">
-
-            <div class="dropdown  dropstyle">
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Your Orders
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">DOCTYPE
-                    <li>
-                        <a href="#">MyAccount</a>
-                    </li>
-                    <li>
-                        <a href="#">MyOrders</a>
-                    </li>
-                    <li>
-                        <a href="#">SignOut</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">About Us</a>
-                    </li>
-            </div>
-
-            <div class="dropdown  dropstyle">
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">GO Functions
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#">Product Master</a>
-                    </li>
-                    <li>
-                        <a href="#">Customer Address</a>
-                    </li>
-                    <li>
-                        <a href="#">Shipping Address</a>
-                    </li>
-
-                </ul>
-
-
-            </div>
-
-            <div class="glyphicon glyphicon-shopping-cart  gla" ng-click=""> </div>
-            <div class="searchsize search">
-                <input type="text" placeholder="Search Items....." name="search">
-                <button type="submit">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
+            <div class="input-group gla">
+                <input type="text" class="form-control " placeholder="Search" id="txtSearch" align="right" width="48" height="48"/>
+                <div class="input-group-btn">
+                     <button class="btn btn-primary" type="submit">
+                     <span class="glyphicon glyphicon-search"></span>
+                     </button>
+                </div>
         </div>
 
         <div class="col-md-3 listItemCell well" ng-repeat="y in products" ng-click="selectedItem(y)">
-            <img src="{{'./resources/images/'+y.img}}" class="img-thumbnail proImage thumb" alt="{{x.pName}}">
+            <a href="{{'#!/productDetails?pid='+y.pid}}"> <img src="{{'./resources/images/'+y.img}}" class="img-thumbnail proImage thumb" alt="{{x.pName}}"></a>
             <br>
 
-            <a href="{{'#!/productDetails?pid='+y.pid}}">{{y.pid}}</a>
+            <a href="{{'#!/productDetails?pid='+y.pid}}">{{y.pid}} </br>{{y.itemName}} </br>{{y.itemPrice}}</br></a>
 
         </div>
 
