--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -24,6 +24,7 @@
 	<script src="./controller/productDetailsController.js"></script>
 	<script src="./controller/homeController.js"></script>
 	<script src="./controller/registerFormController.js"></script>
+	<script src="./controller/loginController.js"></script>
 </head>
 <body ng-app="myApp">
     <div class="logo">
