--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -25,6 +25,10 @@
 	<script src="./controller/homeController.js"></script>
 	<script src="./controller/registerFormController.js"></script>
 	<script src="./controller/loginController.js"></script>
+	<script src="./controller/addTechnicalSpecsController.js"></script>
+	<script src="./controller/getTechSpecsController.js"></script>
+
+
 </head>
 <body ng-app="myApp">
     <div class="logo">
