--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-	<meta charset="utf-8">
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="shortcut icon" href="./resources/logo/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+   
+	<link rel="stylesheet" href="style.css">
     
 	<script src="./router.js"></script>
 	<script src="./controller/cartController.js"></script>
@@ -24,6 +25,7 @@
 	<script src="./controller/productDetailsController.js"></script>
 	<script src="./controller/homeController.js"></script>
 	<script src="./controller/registerFormController.js"></script>
+	<script src="./controller/addTechnicalSpecsController.js"></script>
 </head>
 <body ng-app="myApp">
     <div class="logo">
